--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,71 +1,93 @@
 :root {
-    --color-dark-blue: #1a1e42;
-    --color-dark-blue-faded: rgb(26, 30, 66, 0.80);
-    --color-orange: #F7931A;
-    --color-white: #fff;
-    --color-grey-500: #667085;
-    --color-grey-400: #98A2B3;
-    --color-grey-300: #D0D5DD;
-    --color-grey-100: #F2F4F7;
-    --color-green: #00B67A;
-    font-size: 62.5%;
+  --color-dark-blue: #1a1e42;
+  --color-dark-blue-faded: rgb(26, 30, 66, 0.80);
+  --color-orange: #F7931A;
+  --color-white: #fff;
+  --color-grey-500: #667085;
+  --color-grey-400: #98A2B3;
+  --color-grey-300: #D0D5DD;
+  --color-grey-100: #F2F4F7;
+  --color-green: #00B67A;
+  font-size: 62.5%;
 }
+
 /* space-grotesk-regular - latin */
 @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Space Grotesk';
-    font-style: normal;
-    font-weight: 400;
-    src: url('./fonts/space-grotesk-v16-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  }
-  /* space-grotesk-500 - latin */
-  @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Space Grotesk';
-    font-style: normal;
-    font-weight: 500;
-    src: url('./fonts/space-grotesk-v16-latin-500.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  }
-  /* space-grotesk-600 - latin */
-  @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Space Grotesk';
-    font-style: normal;
-    font-weight: 600;
-    src: url('./fonts/space-grotesk-v16-latin-600.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-  }
-body {
-    font-family: 'Space Grotesk', sans-serif;
-    font-size: 1.5rem;
-    background-color: var(--color-white);
-    margin: 0;
+  font-display: swap;
+  /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Space Grotesk';
+  font-style: normal;
+  font-weight: 400;
+  src: url('./fonts/space-grotesk-v16-latin-regular.woff2') format('woff2');
+  /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
+
+/* space-grotesk-500 - latin */
+@font-face {
+  font-display: swap;
+  /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Space Grotesk';
+  font-style: normal;
+  font-weight: 500;
+  src: url('./fonts/space-grotesk-v16-latin-500.woff2') format('woff2');
+  /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
+/* space-grotesk-600 - latin */
+@font-face {
+  font-display: swap;
+  /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Space Grotesk';
+  font-style: normal;
+  font-weight: 600;
+  src: url('./fonts/space-grotesk-v16-latin-600.woff2') format('woff2');
+  /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
+body {
+  font-family: 'Space Grotesk', sans-serif;
+  font-size: 1.5rem;
+  background-color: var(--color-white);
+  margin: 0;
+}
+
 p {
   font-size: 1.5rem;
   color: var(--color-dark-blue-faded);
+  font-weight: 400;
+  line-height: 26px;
 }
-h2 {
-  font-size: 3rem;
+
+h3 {
+  font-size: 2.5rem;
+  line-height: 30px;
   font-weight: 600;
   color: var(--color-dark-blue);
 }
-#form, #why-rewallet, #process, #promise, #get-in-touch {
+
+h2 {
+  font-size: 3.5rem;
+  line-height: 40px;
+  font-weight: 600;
+  color: var(--color-dark-blue);
+}
+
+.dark {
   background-color: var(--color-dark-blue);
 }
-#form p , #why-rewallet p, #process p, #promise p, #get-in-touch p {
+
+.dark p {
   background-color: var(--color-dark-blue);
   color: var(--color-grey-300);
 }
-#form h2, #why-rewallet h2, #process h2, #promise h2, #get-in-touch h2 {
-  background-color: var(--color-dark-blue);
-  color: white;
-}
-#form h3 , #why-rewallet h3, #process h3, #promise h3, #get-in-touch h3 {
+
+.dark h2,
+.dark h3 {
   background-color: var(--color-dark-blue);
   color: white;
 }
 
-#why-rewallet li, #promise li{
+.dark li {
   display: flex;
   padding: 32px;
   flex-direction: column;
@@ -75,53 +97,90 @@ h2 {
   border-radius: 8px;
   background-color: #2A2D51;
 }
+
+.dark li p,
+.dark li h3 {
+  margin: 0;
+}
+
+.dark li h3,
+.dark li p {
+  background-color: #2A2D51;
+}
+
 .footer {
   background-color: var(--color-grey-100);
 
 }
+
 .wrapper {
-  border: black 2px solid;
-  width: 100%;
   max-width: 700px;
-  padding: 0 1rem;
+  padding: 0 1.5rem;
   margin: 0 auto;
 }
-ul, ol {
+
+ul,ol {
   margin: 0;
   padding: 0;
 }
 
 strong {
-    color: var(--strong-color)
+  color: var(--color-orange)
 }
 
-.wallet-list{
-  color: var(--color-grey);
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
+.wallet-list li p,
+.rec-wallets {
+  color: var(--color-grey-400);
   line-height: 24px;
+  font-weight: 500;
 }
-.wallet-list li {
-  display: flex;
-  width: 170px;
-  align-items: center;
-  gap: 8px;
-}
+
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
+}
+
+.unlock-btn {
+  display: flex;
+  padding: 10px 24px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  background-color: var(--color-orange);
+  color: white;
+  border: none;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+.more-btn {
+  display: flex;
+  padding: 10px 24px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  background-color: var(--color-orange);
+  color: white;
+  border: none;
+  font-size: 1.5rem;
+  font-weight: 600;
 }
 .btn {
   border: none;
+  padding: 0;
+  margin: 0;
 }
-.call-to-action {
-    border-radius: 4px;
-    color: #ffffff;
-    background-color: var(--strong-color);
-    display: flexbox;
-    padding: 10px 24px;
-    justify-content: center;
-    align-items: flex-end;
-    gap: 10px;
+.side-nav {
+  display: none;
+}
+ul, ol {
+  list-style-type: none;
+}
+#FAQ button {
+  font-size: 2.3rem;
+  line-height: 30px;
+  font-weight: 500;
+  background-color: inherit;
+  display: flex;
+  
 }
