--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -44,6 +44,117 @@
   /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
+.footer_top nav {
+  color: #475467;
+  font-weight: 600;
+  line-height: 24px;
+}
+
+.footer_top p {
+  color: var(--color-dark-blue);
+
+}
+
+.footer_bottom a {
+  color: #475467;
+  font-weight: 600;
+  line-height: 24px;
+}
+
+.footer_bottom p {
+  color: var(--color-grey-400);
+  font-weight: 400;
+  line-height: 24px;
+
+}
+
+#form p {
+  color: white;
+  font-size: 2.3rem;
+  line-height: 30px;
+  font-weight: 400;
+  margin: 25px 0;
+
+}
+
+#form {
+  margin: 48px 0px 60px;
+  text-align: center;
+
+}
+
+.form-wrapper {
+  padding: 1rem 1.5rem;
+  margin: 0 auto;
+}
+
+#form .btn {
+  display: flex;
+  padding: 11px 24px;
+  justify-content: center;
+  align-items: center;
+  align-self: stretch;
+  border-radius: 4px;
+  width: 100%;
+  margin: 12px 0px;
+  background-color: #F9FAFB;
+  font-size: 1.5rem;
+  color: var(--color-dark-blue);
+  font-weight: 400;
+  line-height: 26px;
+}
+
+.get-in-touch--wrapper {
+  padding: 1rem 1.5rem;
+  margin: 0 auto;
+  color: var(--color-grey-300);
+}
+
+.get-in-touch--wrapper h2 {
+  color: white;
+  font-weight: 600;
+  line-height: 52px;
+}
+
+.get-in-touch--wrapper p,
+.get-in-touch--wrapper a {
+  font-weight: 400;
+  line-height: 32px;
+  font-size: 1.7rem;
+}
+
+#get-in-touch {
+  margin: 120px 0px 60px;
+}
+
+.landing h1 {
+  display: hidden;
+}
+
+.trustpilot-btn {
+  display: flex;
+  padding: 11px 24px;
+  justify-content: center;
+  align-items: center;
+  align-self: stretch;
+  border-radius: 4px;
+  background: #00B67A;
+  font-weight: 600;
+  font-size: 1.5rem;
+  color: white;
+}
+
+.trustpilot-btn img {
+  margin-left: 8px;
+}
+
+.review {
+  font-weight: 400;
+  line-height: 26px;
+  border-radius: 8px;
+  box-shadow: 0px 12px 16px -4px rgba(16, 24, 40, 0.25);
+}
+
 body {
   font-family: 'Space Grotesk', sans-serif;
   font-size: 1.5rem;
@@ -58,8 +169,15 @@ p {
   line-height: 26px;
 }
 
+.heading {
+  font-size: 3.5rem;
+  line-height: 40px;
+  font-weight: 600;
+  color: var(--color-dark-blue);
+}
+
 h3 {
-  font-size: 2.5rem;
+  font-size: 2.3rem;
   line-height: 30px;
   font-weight: 600;
   color: var(--color-dark-blue);
@@ -113,13 +231,26 @@ h2 {
 
 }
 
+.articles p,
+.articles time {
+  color: var(--color-grey-400);
+  font-weight: 500;
+  line-height: 24px;
+  margin: 0;
+}
+
+.articles h3 {
+  margin: 5px 0px 20px;
+}
+
 .wrapper {
   max-width: 700px;
   padding: 0 1.5rem;
   margin: 0 auto;
 }
 
-ul,ol {
+ul,
+ol {
   margin: 0;
   padding: 0;
 }
@@ -159,28 +290,38 @@ a {
   justify-content: center;
   align-items: center;
   border-radius: 4px;
+  align-self: stretch;
   background-color: var(--color-orange);
   color: white;
   border: none;
   font-size: 1.5rem;
   font-weight: 600;
+  width: 100%;
 }
+
 .btn {
   border: none;
-  padding: 0;
-  margin: 0;
 }
+
 .side-nav {
   display: none;
 }
-ul, ol {
+
+ul,
+ol {
   list-style-type: none;
 }
+
 #FAQ button {
   font-size: 2.3rem;
   line-height: 30px;
   font-weight: 500;
   background-color: inherit;
   display: flex;
-  
+  color: var(--color-dark-blue);
+  text-align: left;
+}
+
+.V-mark p {
+  margin: 5px 0px;
 }
