--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -332,7 +332,13 @@ strong {
   line-height: 24px;
   font-weight: 500;
 }
-
+#about .about--link {
+  color: var(--color-orange);
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  font-weight: 600;
+}
 .wallet-list a {
   display: flex;
   align-items: center;
@@ -346,6 +352,7 @@ strong {
 }
 
 
+
 .wallet-list img,
 .wallet-list p {
   display: inline;
@@ -357,6 +364,7 @@ a {
 }
 
 .unlock-btn {
+  margin: 0 auto; 
   display: flex;
   padding: 10px 24px;
   justify-content: center;
