--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -319,7 +319,7 @@ h2 {
   margin-top: 28px;
 }
 .wrapper {
-  max-width: 1440px;
+  max-width: 720px;
   padding: 24px 1.5rem;
   margin: 0 auto;
 }
@@ -518,4 +518,7 @@ blockquote p {
 
 #why-rewallet li {
   margin-bottom: 24px;
+}
+.articles .blog--articles--news-img {
+  width: 100%;
 }
