--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -44,7 +44,8 @@
   /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
-*,*::before {
+*,
+*::before {
   box-sizing: border-box;
 }
 
@@ -53,6 +54,7 @@
   font-weight: 600;
   line-height: 24px;
 }
+
 .partners ul li img {
   width: 130px;
 }
@@ -105,6 +107,7 @@
   padding-top: 25px;
   padding-bottom: 15px;
 }
+
 #form fieldset {
   border: none;
 }
@@ -122,6 +125,10 @@
 .btn {
   border: none;
   background-color: inherit;
+}
+
+.btn:hover {
+  cursor: pointer;
 }
 
 #form .btn {
@@ -264,10 +271,14 @@ h2 {
   background-color: var(--color-dark-blue);
   color: white;
 }
-#why-rewallet ul, #process ol, #promise ul {
+
+#why-rewallet ul,
+#process ol,
+#promise ul {
   display: flex;
   flex-direction: column;
 }
+
 .dark li {
   display: inherit;
   flex-direction: column;
@@ -325,6 +336,7 @@ h2 {
 .articles li {
   margin-top: 28px;
 }
+
 .wrapper {
   max-width: 720px;
   padding: 24px 1.5rem;
@@ -347,6 +359,7 @@ strong {
   line-height: 24px;
   font-weight: 500;
 }
+
 #about .about--link {
   color: var(--color-orange);
   display: flex;
@@ -355,6 +368,7 @@ strong {
   font-weight: 600;
   margin-bottom: 15px;
 }
+
 .wallet-list a {
   display: flex;
   align-items: center;
@@ -380,7 +394,7 @@ a {
 }
 
 .unlock-btn {
-  margin: 0 auto; 
+  margin: 0 auto;
   display: flex;
   padding: 10px 24px;
   justify-content: center;
@@ -526,6 +540,7 @@ blockquote p {
 #why-rewallet li {
   margin-bottom: 24px;
 }
+
 .articles .blog--articles--news-img {
   width: 100%;
 }
