--- a/grid/style.css
+++ b/grid/style.css
@@ -9,71 +9,119 @@
     --color-grey-100: #F2F4F7;
     --color-green: #00B67A;
     font-size: 62.5%;
-  }
-  
-* {
+}
+
+/* space-grotesk-regular - latin */
+@font-face {
+    font-display: swap;
+    /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Space Grotesk';
+    font-style: normal;
+    font-weight: 400;
+    src: url('./fonts/space-grotesk-v16-latin-regular.woff2') format('woff2');
+    /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
+/* space-grotesk-500 - latin */
+@font-face {
+    font-display: swap;
+    /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Space Grotesk';
+    font-style: normal;
+    font-weight: 500;
+    src: url('./fonts/space-grotesk-v16-latin-500.woff2') format('woff2');
+    /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
+/* space-grotesk-600 - latin */
+@font-face {
+    font-display: swap;
+    /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Space Grotesk';
+    font-style: normal;
+    font-weight: 600;
+    src: url('./fonts/space-grotesk-v16-latin-600.woff2') format('woff2');
+    /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
+*,
+*::before {
     box-sizing: border-box;
 }
 
 body {
     margin: 0;
     padding: 0;
+    font-family: 'Space Grotesk';
 }
+
 .btn {
     border: none;
     background-color: inherit;
-  }
+}
+
+.btn:hover {
+    cursor: pointer;
+}
+
 .wrapper {
     max-width: 720px;
     margin: 0 auto;
     padding: 1rem 1.5rem;
 }
+
 .header {
     display: flex;
     justify-content: space-between;
-  
+
 }
 
 .side-nav {
     display: none;
 }
+
 .footer_top nav {
     color: #475467;
     font-weight: 600;
     line-height: 24px;
 }
+
 .footer_top img {
     margin-bottom: 25px;
-  }
-  
-  .footer_top li {
+}
+
+.footer_top li {
     margin-bottom: 15px;
-  }
-  
-  .footer_bottom a {
+}
+
+.footer_bottom a {
     color: #475467;
     font-weight: 600;
     line-height: 24px;
     margin-right: 35px;
-  }
-  
-  .footer_bottom p {
+}
+
+.footer_bottom p {
     color: var(--color-grey-400);
     font-weight: 400;
     line-height: 24px;
-  
-  }
-.footer {
-  background-color: var(--color-grey-100);
 
 }
+
+.footer {
+    background-color: var(--color-grey-100);
+
+}
+
 .rating {
     display: flex;
     align-items: center;
-  }
-.rating .score {
-  margin: 0 0 0 10px;
 }
+
+.rating .score {
+    margin: 0 0 0 10px;
+}
+
 .wrapper-grid-1 {
     display: grid;
     grid-template-columns: repeat(5 1fr);
@@ -116,6 +164,7 @@ body {
     height: 50px;
     border-bottom-left-radius: 10px;
 }
+
 .obj-3 {
     grid-area: 6 / 2 / 7 / 3;
     height: 50px;
@@ -185,12 +234,14 @@ body {
     border: 2px solid orange;
 
 }
+
 ul,
 ol {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
 }
+
 .div1 {
     grid-area: 1 / 1 / 2 / 7;
 
@@ -223,24 +274,31 @@ ol {
 
     margin: 5px;
 }
+
 a {
     text-decoration: none;
     color: inherit;
-  }
+    font-family: 'Space Grotesk';
+}
+
 .xadanie,
-.zadanie, .xadanie-3 {
+.zadanie,
+.xadanie-3 {
     margin: 50px 0;
 }
+
 .wrapper-grid-3 {
     display: grid;
     grid-gap: 1rem;
     grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
 }
+
 .div-3 {
     height: 100px;
     display: grid;
     place-items: center;
 }
+
 .div3--blocklink {
     text-decoration: none;
     font-size: 25px;
