--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -138,7 +138,12 @@ h2 {
   font-weight: 600;
   color: var(--color-dark-blue);
 }
-
+.form p {
+  margin-bottom: 0;
+}
+.form .form--gender-male {
+  margin-top: 0;
+}
 .form h1 {
   font-size: 3.5rem;
   line-height: 40px;
