--- a/grid/main.css
+++ b/grid/main.css
@@ -224,8 +224,8 @@ body {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
+    grid-column-gap: px;
+    grid-row-gap: px;
     border: 2px solid blue;
 }
 
