--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,13 +1,13 @@
 :root {
-  --color-dark-blue: #1a1e42;
+  --color-dark-blue: #181b36;
   --color-dark-blue-faded: rgb(26, 30, 66, 0.80);
-  --color-orange: #F7931A;
+  --color-orange: #ff6a00;
   --color-white: #fff;
   --color-grey-500: #667085;
-  --color-grey-400: #98A2B3;
+  --color-grey-400: #667085;
   --color-grey-300: #D0D5DD;
   --color-grey-100: #F2F4F7;
-  --color-green: #00B67A;
+  --color-green: #028e5f;
   font-size: 62.5%;
 }
 
@@ -49,6 +49,25 @@
   box-sizing: border-box;
 }
 
+.skip-link {
+  position: absolute;
+  top: -40px;
+  left: 0;
+  background: var(--color-orange);
+  color: white;
+  font-family: 'Space Grotesk';
+  font-style: normal;
+  font-size: 1.7rem;
+  font-weight: 600;
+  border-radius: 4px;
+  padding: 8px 10px;
+  z-index: 100;
+}
+
+.skip-link:focus {
+  top: 0;
+}
+
 .footer_top nav {
   color: #475467;
   font-weight: 600;
@@ -77,8 +96,8 @@
   margin: 0 0 0 10px;
 }
 
-.footer_top img {
-  margin-bottom: 25px;
+footer nav {
+  margin-top: 25px;
 }
 
 .footer_top li {
@@ -103,7 +122,7 @@
   color: white;
   font-size: 2.3rem;
   line-height: 30px;
-  font-weight: 400;
+  font-weight: 600;
   padding-top: 25px;
   padding-bottom: 15px;
 }
@@ -152,7 +171,18 @@
   margin: 0 auto;
   color: var(--color-grey-300);
 }
-
+a:focus , button:focus {
+  border: 2px solid black;
+  outline: 2px white solid;
+}
+.dark a:focus, .dark button:focus {
+  border: 2px solid white;
+  outline: 2px black solid;
+}
+#form a:focus, #form button:focus {
+  border: 4px solid orange;
+  outline: 2px solid black;
+}
 .get-in-touch--wrapper h2 {
   color: white;
   font-weight: 600;
@@ -205,7 +235,7 @@
   align-items: center;
   align-self: stretch;
   border-radius: 4px;
-  background: #00B67A;
+  background: var(--color-green);
   font-weight: 600;
   font-size: 1.5rem;
   color: white;
