--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -1,44 +1,54 @@
 .card-container {
     perspective: 500px;
-    display: inline-flex;
-    align-items: center;
-    justify-items: center;
 
 }
-.cardo {
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: rgb(236, 140, 22);
-    border: 2px black solid;
-    width: 300px;
-    height: 500px;
+
+.card-container:hover .card {
+    transform: rotateY(180deg);
+}
+
+.card {
     transition: transform 0.7s;
     transform-style: preserve-3d;
+}
+
+.front,
+.back {
+    backface-visibility: hidden;
+}
+
+.back {
+    transform: rotateY(180deg);
 }
 .card {
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: rgb(236, 140, 22);
-    border: 2px black solid;
     width: 300px;
-    height: 500px;
-    transition: transform 0.7s;
-    transform-style: preserve-3d;
+    height: 400px;
 }
-.card:hover {
-    transform: rotateY(180deg)
-}
-.card-container:hover .back {
-    transform: rotateY( -180deg )
-}
-.front, .back {
-    backface-vis1ibility: hidden;
-}
+
+.fzont,
 .back {
-    transform: rotateY( 180deg );
-    z-index:12;
+    box-shadow: 0 1px 6px 0;
+    position: absolute;
+    width: 100%;
+    top: 0;
+    bottom: 0;
+
+}
+.container {
+    height: 100vh;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+img {
+    display: block;
+    width: 300px;
+    height: 400px;
+    object-position: center;
+    object-fit: cover;
+}
+body {
+    margin: 0;
+    padding: 0;
 }
