--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -56,6 +56,11 @@ body {
   margin: 0;
 }
 
+.form label:not(.form--gender--label):focus-within,
+.form div:focus-within p {
+  color: var(--color-orange);
+}
+
 label {
   font-size: 1.5rem;
   font-weight: 400;
@@ -100,9 +105,7 @@ legend {
   display: block;
 }
 
-.form .form--gender-male,
-.form .form--gender-female,
-.form .form--gender-not_set {
+.form .form--gender--label {
   margin-left: 24px;
   margin-top: 4px;
   margin-bottom: 4px;
@@ -138,12 +141,15 @@ h2 {
   font-weight: 600;
   color: var(--color-dark-blue);
 }
+
 .form p {
   margin-bottom: 0;
 }
+
 .form .form--gender-male {
   margin-top: 0;
 }
+
 .form h1 {
   font-size: 3.5rem;
   line-height: 40px;
@@ -199,6 +205,9 @@ body .footer {
 
 .footer_top img {
   margin-bottom: 25px;
+  rotate: 30deg;
+  scale: 1.5;
+  transform: skew(10);
 }
 
 .footer_top li {
@@ -234,7 +243,7 @@ body .footer {
 
 .dark p {
   background-color: var(--color-dark-blue);
-  color: var(--color-grey-300);
+  color: white;
 }
 
 fieldset {
@@ -325,4 +334,41 @@ ol {
 
 .form select option:last-child {
   border: none;
+}
+
+.dl-form {
+  font-size: 1.5rem;
+  color: white;
+  border-radius: 10px;
+}
+
+.dl-form dt::first-letter {
+  font-size: 2rem;
+  color: var(--color-orange)
+}
+
+.dl-form dd {
+  position: relative;
+}
+
+.dl-form dd::before {
+  content: "🛈  ";
+  position: absolute;
+  left: -20px;
+  top: 0;
+}
+
+.pseudo-elements label:has(input:checked),
+.pseudo-classes label:has(input:checked) {
+  text-decoration: line-through;
+}
+
+.pseudo-elements ul li:nth-of-type(2n),
+.pseudo-classes ul li:nth-of-type(2n) {
+  color: blueviolet;
+}
+
+.pseudo-elements ul li:nth-of-type(2n+1),
+.pseudo-classes ul li:nth-of-type(2n+1) {
+  color: var(--color-orange);
 }
