--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -48,7 +48,13 @@
 *::before {
   box-sizing: border-box;
 }
+nav a{
+  transition: color 0.2s ease-in-out;
+}
+nav a:hover{
+  color: var(--color-orange);
 
+}
 .skip-link {
   position: absolute;
   top: -40px;
@@ -109,8 +115,11 @@ footer nav {
   font-weight: 600;
   line-height: 24px;
   margin-right: 35px;
+  transition: color 0.2s ease-in-out;
 }
-
+.footer_bottom a:hover {
+  color: var(--color-orange);
+}
 .footer_bottom p {
   color: var(--color-grey-400);
   font-weight: 400;
@@ -164,8 +173,15 @@ footer nav {
   color: var(--color-dark-blue);
   font-weight: 400;
   line-height: 26px;
-}
+  border: 2px solid white;
+  transition: all 0.2s ease-in-out;
 
+}
+#form .btn:hover {
+  border-color: var(--color-orange);
+  color: var(--color-orange);
+  box-shadow: rgba(0, 0, 0, 0.493) 2px 4px;
+}
 .get-in-touch--wrapper {
   padding: 2.5rem 2rem;
   margin: 0 auto;
@@ -233,12 +249,27 @@ a:focus , button:focus {
   padding: 11px 24px;
   justify-content: center;
   align-items: center;
-  align-self: stretch;
   border-radius: 4px;
   background: var(--color-green);
   font-weight: 600;
   font-size: 1.5rem;
   color: white;
+  transition: box-shadow 0.2 ease-in-out;
+}
+.trustpilot-btn:hover {
+  box-shadow: rgba(0, 0, 0, 0.493) 1px 2px;
+}
+a:active , button:active {
+  border: 2px solid black;
+  outline: 2px white solid;
+}
+.dark a:active, .dark button:active {
+  border: 2px solid white;
+  outline: 2px black solid;
+}
+#form a:active, #form button:active {
+  border: 4px solid orange;
+  outline: 2px solid black;
 }
 
 .trustpilot-btn img {
@@ -392,11 +423,14 @@ strong {
 
 #about .about--link {
   color: var(--color-orange);
-  display: flex;
-  align-items: center;
+
   gap: 8px;
   font-weight: 600;
   margin-bottom: 15px;
+  transition: color 0.2s ease-in-out;
+}
+#about .about--link:hover {
+  color: var(--color-dark-blue);
 }
 
 .wallet-list a {
@@ -436,15 +470,19 @@ a {
   font-size: 1.5rem;
   font-weight: 600;
   margin: 24px 0px;
+  transition: all 0.2s ease-in-out;
+  border: 1px solid var(--color-orange)
 }
-
+.unlock-btn:hover {
+  background-color: var(--color-dark-blue);
+  box-shadow: rgba(0, 0, 0, 0.493) 2px 4px;
+}
 .more-btn {
   display: flex;
   padding: 14px 24px;
   justify-content: center;
   align-items: center;
   border-radius: 4px;
-  align-self: stretch;
   background-color: var(--color-orange);
   color: white;
   border: none;
@@ -452,8 +490,14 @@ a {
   font-weight: 600;
   width: 100%;
   margin: 48px 0px 0px;
-}
+  border: 1px solid var(--color-orange);
+  transition: all 0.2s ease-in-out;
 
+}
+.more-btn:hover {
+  background-color: var(--color-dark-blue);
+  box-shadow: rgba(0, 0, 0, 0.4) 1px 2px;
+}
 .start-now h2 {
   margin-bottom: 0;
 }
