--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 :root {
-  --color-dark-blue: #181b36;
+  --color-dark-blue: #360036;
   --color-dark-blue-faded: rgb(26, 30, 66, 0.80);
   --color-orange: #ff6a00;
   --color-white: #fff;
