--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -633,3 +633,6 @@ blockquote p {
   background-image: url(../icons/Icon.svg);
   background-size: cover;
 }
+#form .form--header{
+  position: relative;
+}
